removed white space, fixed fade

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -177,7 +177,7 @@ h1, h2, h3, h4, h5, h6, p {
     background: #C9D6FF;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #D8EEF4, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right,  #D8EEF4, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: 100vh;
+    height: 1100px !important
 }
 
 #hero-login .container-fluid {
